--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+html, body, #root {
+  height: 100%;
+  margin: 0;
+}
 a {
   font-weight: 500;
   color: #646cff;
@@ -24,8 +27,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
